--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
       <div class="bg-gray-950 opacity-80 absolute left-0 right-0 top-0 bottom-0 z-10"></div>
       <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-40 relative z-20">
         <div class="text-center">
-          <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">{{ .Params.Title }}</h1>
+          <h1 class="text-4xl text-white md:text-5xl">{{ .Params.Title }}</h1>
         </div>
       </div>
     </div>
