--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,6 @@
 {{ partial "global/head" . }}
 {{ partial "global/navbar" . }}
-<div>
+<div id="page-banner">
     <div class="relative isolate overflow-hidden pt-14">
       <img src="{{ .Site.Data.appearance.banner_image }}" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
       <div class="bg-gray-950 opacity-80 absolute left-0 right-0 top-0 bottom-0 z-10"></div>
