--- a/layouts/partials/page-builder/hero.html
+++ b/layouts/partials/page-builder/hero.html
@@ -1,14 +1,24 @@
 <div>
     <div class="relative isolate overflow-hidden pt-14">
-        {{ $color := index .sectionData "color" }}
+        {{ $color := index .sectionData "overlayColor" }}
         {{ if $color }}
         <div class="absolute left-0 right-0 bottom-0 top-0" style="background-color: {{ $color | safeCSS }}"></div>
         {{ end }}
       <img src="{{ index .sectionData "image" }}" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
       <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56 relative z-10">
-        <div class="text-center">
-          <h1 class="text-4xl font-bold tracking-tight sm:text-6xl" style="color:{{ index .sectionData "headingColor" }}">{{ index .sectionData "heading" }}</h1>
-          <div class="mt-6 text-lg leading-8" style="color:{{ index .sectionData "bodyColor" }}">{{ index .sectionData "body" | markdownify }}</div>
+        <div class="text-center content">
+          <h1 class="text-4xl tracking-tight sm:text-6xl" style="color:{{ index .sectionData "headingColor" }}">{{ index .sectionData "heading" }}</h1>
+          <div class="mt-6" style="color:{{ index .sectionData "bodyColor" }}">{{ index .sectionData "body" | markdownify }}</div>
+          {{ if index .sectionData "enable_quick_search" }}
+          <div class="max-w-3xl justify-center flex mx-auto mt-10">
+            <script>
+              document.currentScript.replaceWith(ihfKestrel.render({
+                "component": "quickSearchWidget",
+                "style": "universal"
+              }));
+            </script>
+          </div>
+          {{ end }}
           <div class="mt-10 flex items-center justify-center gap-x-6">
             <a href="{{ index .sectionData "button_link" }}" class="primary-button">Get started</a>
           </div>
