--- a/layouts/partials/templates/blog-list.html
+++ b/layouts/partials/templates/blog-list.html
@@ -20,7 +20,7 @@
                                 <div class="mt-2">
                                     <p>{{ .Content | truncate 150 }}</p>
                                 </div>
-                                <a href="{{ .Permalink }}" class="text-blue-600 font-bold italic">Read more...</a>
+                                <a href="{{ .Permalink }}" class="accent font-bold italic">Read more...</a>
                             </div>
                         </div>
                     {{ end }}
