--- a/layouts/partials/templates/team-card.html
+++ b/layouts/partials/templates/team-card.html
@@ -5,5 +5,6 @@
         </div>
         <h3 class="mt-6 text-lg font-semibold leading-8 tracking-tight">{{ .title }}</h3>
         <p class="text-base leading-7 text-gray-300">{{ .position }}</p>
+        <a href="{{ .Permalink }}" class="accent font-semibold">View Profile</a>
     </a>
 </div>
