--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -1,6 +1,6 @@
 {{ $branding := .Site.Data.branding }}
 {{ $profile := .Site.Data.profile }}
-<header class="bg-slate-700">
+<header>
   <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
     <div class="flex lg:flex-1">
       <a href="#" class="-m-1.5 p-1.5">
