--- a/layouts/partials/page-builder/featured-panel.html
+++ b/layouts/partials/page-builder/featured-panel.html
@@ -10,7 +10,7 @@
     </div>
     {{ end }}
 </div>
-    <div class="swiper-container-fPanel mt-16 overflow-hidden">
+    <div class="swiper-container-fPanel relative mt-16 overflow-hidden">
         <div class="swiper-wrapper">
         {{ range index .sectionData "featured_blocks" }}
         <div class="swiper-slide">
@@ -21,10 +21,11 @@
               alt=""
               class="absolute inset-0 -z-10 h-full w-full object-cover"
             />
+            <div class="absolute top-0 bottom-0 left-0 right-0 bg-black opacity-30"></div>
             {{ end }}
             {{ with .body }}
             <div
-              class="mx-auto max-w-2xl lg:text-center content flex items-center h-full px-4"
+              class="mx-auto max-w-2xl content flex items-center h-full md:px-4 px-16 text-white relative z-10 text-center"
             >
               {{ . | markdownify }}
             </div>
@@ -33,8 +34,6 @@
         </div>
         {{ end }}
       </div>
-      <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
       <!-- Add Navigation -->
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
@@ -55,9 +54,6 @@
         slidesPerView: {{ with index .sectionData "column_number" }}{{ . }}{{ else }}3{{ end }},
       },
     },
-      pagination: {
-        el: ".swiper-pagination", // Pagination container
-      },
       navigation: {
         nextEl: ".swiper-button-next", // Next slide button
         prevEl: ".swiper-button-prev", // Previous slide button
