--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -17,9 +17,11 @@
         --primary-button-text-color: {{ .Site.Data.appearance.colors_primary_button_text_color }};
         --primary-link-color: {{ .Site.Data.appearance.colors.links }};
         --primary-accent-color: {{ .Site.Data.appearance.colors_accent }};
-        --idx-title-color: {{ .Site.Data.appearance.colors.idx_title_background_color }};
-        --idx-title-text-color: {{ .Site.Data.appearance.colors.idx_title_text_color }};
-        
+
+        /* HEADER */
+        --header-background-color: {{ .Site.Data.settings.header_color }};
+        --header-text-color: {{ .Site.Data.settings.header_text_color }};
+
         /* TYPOGRAPHY */
         --footer-heading-color: {{ .Site.Data.footer.footer_heading_color }};
         --footer-text-color: {{ .Site.Data.footer.footer_text_color }};
