--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -1,7 +1,7 @@
 {{ $branding := .Site.Data.branding }}
 {{ $profile := .Site.Data.profile }}
 <header>
-  <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
+  <nav class="flex items-center justify-between p-6 lg:px-8 container mx-auto" aria-label="Global">
     <div class="flex lg:flex-1">
       <a href="#" class="-m-1.5 p-1.5">
         <span class="sr-only">{{ $profile.company_name }}</span>
@@ -31,7 +31,7 @@
           <ul class="dropdown-menu absolute hidden z-50 space-y-2 bg-white p-2 shadow-lg min-w-full top-10 left-0 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform group-hover:translate-y-1">
             {{ range .sub_items }}
               <li>
-                <a href="{{ .path }}" class="text-sm leading-6 hover:text-indigo-400">{{ .label }}</a>
+                <a href="{{ .path }}" class="text-sm leading-6 !text-black">{{ .label }}</a>
               </li>
             {{ end }}
           </ul>
