--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -59,7 +59,7 @@
                     {{ range $footer.important_documents }}
                     <li><a href="{{ .document | absURL }}" target="_blank" class="font-semibold">{{ .name }}</a></li>
                     {{ end }}
-                    <li><small data-cms-options='{"image": false}' class="editable">The data and information contained within this website are for informational purposes. We try our best to keep all information up-to-date but encourage visitors to do their own research to determine the accuracy of material available on this website. While we strive to keep the information accurate, we do not warrant the accuracy or completeness of the information, text, graphics, links, or other items contained within these materials. Please visit our full disclaimer for more information.</small></li>
+                    <li><small>{{ $footer.disclaimer }}</small></li>
                     <li><small>&copy; Copyright {{ dateFormat "2006" now }}, {{ $companyName }} {{ if not $footer.remove_credit }}&middot; <a href="https://www.hungryram.com/services/agent-idx-websites/" target="_blank" class="font-semibold" rel="nofollow">Real Estate Website</a> Powered by <a href="https://www.hungryram.com">Hungry Ram Web Design</a>{{ end }}</small></li>
                     {{ if $footer.equal_housing_logo }}
                     <li class="inline-block mr-4"><img src="https://res.cloudinary.com/hungryram19/image/upload/v1628532562/Resources/equal-housing-opportunity-transparent_jdomdn.png" alt="equal housing opportunity logo" width="30" /></li>
