--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -3,7 +3,10 @@
 {{ $footerContact := .Site.Data.profile.contact_information }}
 {{ $footerSocial := .Site.Data.profile.social_media }}
 
-<footer class="bg-cover relative bg-center bg-no-repeat py-20"  style="{{ if $footer.background_color }}background-color:{{ $footer.background_color }}{{ end }};{{ if $footer.footer_background }}background-image:url({{ $footer.footer_background }}){{ end }}">
+<footer class="bg-cover relative bg-center bg-no-repeat py-20" style="{{ if $footer.background_color }}background-color:{{ $footer.background_color }}{{ end }}">
+    <img src="{{ $footer.footer_background }}" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
+    <div class="absolute left-0 right-0 bottom-0 top-0" style="background-color: {{ $footer.overlay | safeCSS }}"></div>
+
     <div class="container mx-auto">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4 {{ if $footer.enable_black_text }}text-white{{ else }}text-black{{ end }}">
             <div>
