--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -13,7 +13,7 @@
                 {{ with $footer.logo }}
                 <img src="{{ . | absURL }}" alt="{{ $companyName }}" width="{{ $footer.logo_width }}" />
                 {{ else }}
-                <h2 class="text-lg font-semibold editable">
+                <h2 class="font-medium">
                     Real Estate Team
                 </h2>
                 {{ end }}
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div>
-                <h2 class="text-lg font-semibold editable">
+                <h2 class="font-medium">
                     Contact
                 </h2>
                 <ul class="mt-4">
@@ -34,7 +34,7 @@
                 </ul>
             </div>
             <div>
-                <h2 class="text-lg font-semibold editable">
+                <h2 class="font-medium">
                     Quick Links
                 </h2>
                 <ul class="mt-4">
@@ -45,7 +45,7 @@
             </div>
             <div>
                 <div class="footer-text">
-                    <h2 class="text-lg font-semibold editable">
+                    <h2 class="font-medium">
                         About
                     </h2>
                     <p class="editable">
@@ -60,15 +60,15 @@
             <div class="w-full text-center">
                 <ul class="mt-10">
                     <li><small>{{ $footer.disclaimer }}</small></li>
-                    <li><small>&copy; Copyright {{ dateFormat "2006" now }}, {{ $companyName }} {{ if not $footer.remove_credit }}&middot; <a href="https://www.hungryram.com/services/agent-idx-websites/" target="_blank" class="font-semibold" rel="nofollow">Real Estate Website</a> Powered by <a href="https://www.hungryram.com">Hungry Ram Web Design</a>{{ end }}</small></li>
+                    <li class="mb-10 mt-8"><small>&copy; Copyright {{ dateFormat "2006" now }}, {{ $companyName }} {{ if not $footer.remove_credit }}&middot; <a href="https://www.hungryram.com/services/agent-idx-websites/" target="_blank" class="font-semibold" rel="nofollow">Real Estate Website</a> Powered by <a href="https://www.hungryram.com">Hungry Ram Web Design</a>{{ end }}</small></li>
                     {{ if $footer.enable_equal_housing_logo }}
-                    <li class="inline-block mr-4"><img src="https://res.cloudinary.com/hungryram19/image/upload/v1628532562/Resources/equal-housing-opportunity-transparent_jdomdn.png" alt="equal housing opportunity logo" width="30" /></li>
+                    <li class="inline-block mr-4"><img src="images/default/equal-housing-opportunity-transparent_jdomdn.png" alt="equal housing opportunity logo" width="30" /></li>
                     {{ end }}
                     {{ if $footer.enable_mls_logo }}
-                    <li class="inline-block mr-4"><img src="https://res.cloudinary.com/hungryram19/image/upload/v1628532562/Resources/mls-logo_bpy61v.png" alt="mls logo" width="80" /></li>
+                    <li class="inline-block mr-4"><img src="images/default/mls-logo_bpy61v.png" alt="mls logo" width="80" /></li>
                     {{ end }}
                     {{ if $footer.enable_realtor_logo }}
-                    <li class="inline-block"><img src="https://res.cloudinary.com/hungryram19/image/upload/v1628532562/Resources/REALTOR-mark_qhm0id.png" alt="REALTOR® logo" width="40" /></li>
+                    <li class="inline-block"><img src="images/default/realtor_logo.png" alt="REALTOR® logo" width="40" /></li>
                     {{ end }}
                 </ul>
             </div>
