--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -19,6 +19,8 @@
         --primary-accent-color: {{ .Site.Data.appearance.colors_accent }};
 
         /* HEADER */
+        --top-header-background: {{ .Site.Data.settings.top_header_color }};
+        --top-header-text: {{ .Site.Data.settings.top_header_text_color }};
         --header-background-color: {{ .Site.Data.settings.header_color }};
         --header-text-color: {{ .Site.Data.settings.header_text_color }};
 
