--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -60,7 +60,7 @@
     </div>
     
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-      <a href="#" class="text-sm font-semibold leading-6 text-white">Log in <span aria-hidden="true">&rarr;</span></a>
+      <a href="#" class="primary-button">Log in <span aria-hidden="true">&rarr;</span></a>
     </div>
   </nav>
   <!-- Mobile menu, show/hide based on menu open state. -->
