--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,9 +1,9 @@
 {{ partial "global/head" . }}
 {{ partial "global/navbar" . }}
 <div id="page-banner">
-    <div class="relative isolate overflow-hidden pt-14">
+    <div class="relative isolate overflow-hidden">
       <img src="{{ .Site.Data.appearance.banner_image }}" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
-      <div class="bg-gray-950 opacity-80 absolute left-0 right-0 top-0 bottom-0 z-10"></div>
+      <div class="absolute left-0 right-0 top-0 bottom-0 z-10" style="background-color:{{ .Site.Data.appearance.banner_image_overlay | safeCSS }}"></div>
       <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-40 relative z-20">
         <div class="text-center">
           <h1 class="text-4xl text-white md:text-5xl">{{ .Params.Title }}</h1>
