--- a/layouts/testimonials/testimonials.html
+++ b/layouts/testimonials/testimonials.html
@@ -1,7 +1,44 @@
 {{ define "main" }}
-<div class="section">
-    <div class="container mx-auto">
-        <h1>test</h1>
+<div class="bg-white py-24 sm:py-32">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+        <div class="mx-auto max-w-xl text-center">
+            {{ range where .Site.Pages "Section" "testimonials" }}
+            {{ if eq .File.BaseFileName "_index" }}
+                <div class="content">
+                    {{ .Params.body }}
+                </div>
+              {{ .Content }}
+            {{ end }}
+          {{ end }}
+          
+        </div>
+        <div class="mx-auto mt-16 flow-root max-w-2xl sm:mt-20 lg:mx-0 lg:max-w-none">
+            <div class="-mt-8 sm:-mx-4 sm:columns-2 sm:text-[0] lg:columns-3">
+                {{ range .RegularPages }}
+                <div class="pt-8 sm:inline-block sm:w-full sm:px-4">
+                    <figure class="rounded-2xl bg-gray-50 p-8 text-sm leading-6">
+                        <blockquote class="text-gray-900">
+                            {{ .Content }}
+                        </blockquote>
+                        <figcaption class="mt-6 flex items-center gap-x-4">
+                            {{ if .Params.image }}
+                            <img class="h-10 w-10 rounded-full bg-gray-50"
+                                src="{{ .Params.image }}"
+                                alt="{{ .Title }}">
+                            {{ end }}
+                            <div>
+                                <div class="font-semibold text-gray-900">{{ .Params.title }}</div>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </div>
+
+                {{ end }}
+
+                <!-- More testimonials... -->
+            </div>
+        </div>
     </div>
 </div>
+
 {{ end }}
