--- a/layouts/testimonials/testimonials.html
+++ b/layouts/testimonials/testimonials.html
@@ -1,16 +1,13 @@
 {{ define "main" }}
-<div class="bg-white py-24 sm:py-32">
+<div class="section">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto max-w-xl text-center">
+        <div class="mx-auto max-w-xl text-center content">
             {{ range where .Site.Pages "Section" "testimonials" }}
             {{ if eq .File.BaseFileName "_index" }}
-                <div class="content">
                     {{ .Params.body }}
-                </div>
               {{ .Content }}
             {{ end }}
           {{ end }}
-          
         </div>
         <div class="mx-auto mt-16 flow-root max-w-2xl sm:mt-20 lg:mx-0 lg:max-w-none">
             <div class="-mt-8 sm:-mx-4 sm:columns-2 sm:text-[0] lg:columns-3">
@@ -32,10 +29,7 @@
                         </figcaption>
                     </figure>
                 </div>
-
                 {{ end }}
-
-                <!-- More testimonials... -->
             </div>
         </div>
     </div>
