--- a/static/css/globals.css
+++ b/static/css/globals.css
@@ -39,6 +39,22 @@ header {
     color: var(--header-text-color);
 }
 
+@keyframes slideIn {
+    0% {
+      transform: translateY(.5rem);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
+  .animate-slide-in {
+    animation: slideIn 0.3s ease-in-out forwards;
+  }
+  
+
 .primary-button,
 [type=submit], 
 button {
