--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,7 +26,10 @@
                 <div class="swiper-wrapper">
                     {{ range first 8 (where $.Site.Pages "Type" "testimonials") }}
                     <div class="swiper-slide bg-white h-full shadow-md">
-                        <div class="flex flex-col py-6 px-10">
+                        <svg class="absolute left-4 accent top-2 z-50 h-8 w-8 -translate-x-3 -translate-y-2 transform" fill="currentColor" viewBox="0 0 32 32" aria-hidden="true">
+                            <path d="M9.352 4C4.456 7.456 1 13.12 1 19.36c0 5.088 3.072 8.064 6.624 8.064 3.36 0 5.856-2.688 5.856-5.856 0-3.168-2.208-5.472-5.088-5.472-.576 0-1.344.096-1.536.192.48-3.264 3.552-7.104 6.624-9.024L9.352 4zm16.512 0c-4.8 3.456-8.256 9.12-8.256 15.36 0 5.088 3.072 8.064 6.624 8.064 3.264 0 5.856-2.688 5.856-5.856 0-3.168-2.304-5.472-5.184-5.472-.576 0-1.248.096-1.44.192.48-3.264 3.456-7.104 6.528-9.024L25.864 4z" />
+                          </svg>
+                        <div class="flex flex-col py-6 px-10 ">
                             <figure class="flex flex-auto flex-col justify-between">
                                 <blockquote class="leading-8 text-gray-900">
                                     {{ .Content }}
@@ -46,7 +49,6 @@
                     </div>
                     {{ end }}
                 </div>
-                <!-- Add pagination and navigation here if needed -->
             </div>
     </div>
 </div>
