--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -19,13 +19,13 @@
 <header>
   <nav class="flex items-center justify-between p-6 lg:px-8 container mx-auto" aria-label="Global">
     <div class="flex lg:flex-1">
-      <a href="#" class="-m-1.5 p-1.5">
+      <a href="/" class="-m-1.5 p-1.5">
         <span class="sr-only">{{ $profile.company_name }}</span>
         <img src="{{ $branding.branding_logo }}" alt="{{ $profile.company_name }}" width="{{ if $branding.branding_logo_width }}{{ $branding.branding_logo_width }}{{ else }}100{{ end }}">
       </a>
     </div>
     <div class="flex lg:hidden">
-      <button id="menuButton" type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-400">
+      <button id="openButton" type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-400">
         <span class="sr-only">Open main menu</span>
         <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -35,27 +35,27 @@
     <div id="menuLinks" class="hidden lg:flex lg:gap-x-12">
       <!-- Hugo Template Logic for Menu -->
       {{ range $.Site.Data.settings.nav_items }}
-        {{ if .sub_items }}
+      {{ if .sub_items }}
         <div class="relative group has-dropdown ml-4"> <!-- Added ml-4 for spacing -->
           <a href="#" class="text-sm font-semibold leading-6 text-white group flex items-center py-4">
             {{ .label }} 
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 ml-1">
               <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
             </svg>
-            
           </a>
-          <ul class="dropdown-menu absolute hidden z-50 space-y-2 bg-white p-2 shadow-lg min-w-full top-10 left-0 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform group-hover:translate-y-1">
+          <ul class="dropdown-menu absolute hidden z-50 bg-white shadow-lg w-60 top-14 left-0 opacity-0 translate-y-2 group-hover:opacity-100 group-hover:translate-y-0 transition-opacity duration-300 ease-in-out group-hover:duration-500 group-hover:ease-in-out animate-slide-in">
             {{ range .sub_items }}
-              <li>
-                <a href="{{ .path }}" class="text-sm leading-6 !text-black">{{ .label }}</a>
+              <li class="border-b last:border-b-0 hover:bg-gray-300 px-2 transition-all duration-500">
+                <a href="{{ .path }}" class="text-sm leading-6 !text-black block hover:pl-1 py-3 transition-all duration-500">{{ .label }}</a>
               </li>
             {{ end }}
           </ul>
         </div>
-        {{ else }}
-          <a href="{{ .path }}" class="text-sm font-semibold leading-6 text-white py-4">{{ .label }}</a>
-        {{ end }}
+      {{ else }}
+        <a href="{{ .path }}" class="text-sm font-semibold leading-6 text-white py-4">{{ .label }}</a>
       {{ end }}
+    {{ end }}
+    
       <!-- End Hugo Template Logic for Menu -->
     </div>
     
@@ -63,34 +63,75 @@
       <a href="{{ .Site.Data.settings.call_to_action_link }}" class="primary-button">{{ .Site.Data.settings.call_to_action_text }}</a>
     </div>
   </nav>
-  <!-- Mobile menu, show/hide based on menu open state. -->
-  <div id="mobileMenu" class="lg:hidden" role="dialog" aria-modal="true" style="display: none;">
-    <!-- Background backdrop, show/hide based on slide-over state. -->
-    <div class="fixed inset-0 z-50"></div>
-    <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-gray-900 px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-white/10">
-      <div class="flex items-center justify-between">
-        <a href="#" class="-m-1.5 p-1.5">
-          <span class="sr-only">Your Company</span>
-          <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="">
-        </a>
-        <button id="closeButton" type="button" class="-m-2.5 rounded-md p-2.5 text-gray-400">
-          <span class="sr-only">Close menu</span>
-          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-          </svg>
-        </button>
-      </div>
-      <div class="mt-6 flow-root">
-        <div class="-my-6 divide-y divide-gray-500/25">
-          <div class="space-y-2 py-6">
+
+
+      <!-- Mobile Menu -->
+      <div id="mobileMenu" class="fixed z-50 inset-y-0 left-0 w-72 bg-gray-900 transform -translate-x-full transition-transform duration-300 ease-in-out">
+        <div class="flex items-center justify-between p-4">
+            <a href="#" class="-m-1.5 p-1.5">
+                <span class="sr-only">Your Company</span>
+                <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="">
+            </a>
+            <button id="closeButton" class="text-gray-400">
+                <span class="sr-only">Close menu</span>
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+            </button>
+        </div>
+    <nav class="p-4">
+        <ul>
             <!-- Hugo Template Logic for Mobile Menu -->
-            {{ range .Site.Data.settings.navigation.nav_items }}
-              <a href="{{ .path }}" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-white hover:bg-gray-800">{{ .label }}</a>
+            {{ range $.Site.Data.settings.nav_items }}
+            {{ if .sub_items }}
+            <li class="relative group"> <!-- Added ml-4 for spacing -->
+                <a href="#" class="text-sm font-semibold leading-6 group flex items-center py-4">
+                    {{ .label }}
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                        class="w-4 h-4 ml-1">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </a>
+                <ul
+                    class="dropdown-menu z-50 w-60 top-0 left-0 translate-y-2">
+                    {{ range .sub_items }}
+                    <li class="border-b last:border-b-0 hover:bg-gray-300 px-2 transition-all duration-500">
+                        <a href="{{ .path }}"
+                            class="text-sm leading-6 block hover:pl-1 py-3 transition-all duration-500">{{ .label }}</a>
+                    </li>
+                    {{ end }}
+                </ul>
+            </li>
+            {{ else }}
+            <li>
+                <a href="{{ .path }}"
+                    class="text-sm font-semibold leading-6 text-white py-4">{{ .label }}</a>
+            </li>
+            {{ end }}
             {{ end }}
             <!-- End Hugo Template Logic for Mobile Menu -->
-          </div>
-        </div>
-      </div>
+        </ul>
+    </nav>
     </div>
-  </div>
 </header>
+<script>
+  const mobileMenu = document.getElementById('mobileMenu');
+  const closeButton = document.getElementById('closeButton');
+  const openButton = document.getElementById('openButton');
+
+  function openMobileMenu() {
+      mobileMenu.style.transform = 'translateX(0)';
+  }
+
+  function closeMobileMenu() {
+      mobileMenu.style.transform = 'translateX(-100%)';
+  }
+
+  openButton.addEventListener('click', openMobileMenu);
+  closeButton.addEventListener('click', closeMobileMenu);
+
+  function toggleDropdown(item) {
+        const submenu = item.nextElementSibling;
+        submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
+    }
+</script>
