--- a/layouts/team/single.html
+++ b/layouts/team/single.html
@@ -1,11 +1,11 @@
 {{ define "main" }}
 <div class="section">
     <div class="container mx-auto">
-        <div class="md:flex gap-20 justify-center">
+        <div class="md:flex gap-20">
             <div class="md:w-1/2">
-                <div class="mx-auto grid max-w-2xl grid-cols-1 items-start gap-x-8">
+                <div class="mx-auto grid grid-cols-1 items-start gap-x-8">
                     <div class="lg:pr-4">
-                        <img class="h-full w-ful" src="{{ .Params.image }}" alt="{{ .Params.title }}">
+                        <img class="h-full" src="{{ .Params.image }}" alt="{{ .Params.title }}">
                       </div>
                     </div>
                     <dl class="mt-10 grid grid-cols-2 gap-5 content">
@@ -23,7 +23,7 @@
                       </div>
                       <div>
                         <dt class="text-sm font-semibold leading-6 text-gray-600">Address</dt>
-                        <dd class="font-bold leading-10 tracking-tight text-gray-900">{{ .Params.address.street }}</dd>
+                        <dd class="leading-10 tracking-tight text-gray-900">{{ .Params.address.street }}</dd>
                       </div>
                     </dl>
             </div>
