--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -39,7 +39,10 @@
 {{ partial "global/seo" . }}
 
 <!-- CUSTOM CSS -->
-{{ .Site.Data.developer.custom_css | safeHTML }}
+{{ .Site.Data.profile.custom_code.head_custom_css | safeHTML }}
+
+<!-- CUSTOM Script -->
+{{ .Site.Data.profile.custom_code.head_custom_script | safeHTML }}
 
 <!-- FONTS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,14 +55,6 @@
 <!-- CUSTOM SCRIPT -->
 {{ .Site.Data.developer.custom_script | safeHTML }}
 
-<script src="https://kestrel.idxhome.com/ihf-kestrel.js"></script>
-<script>
-	window.ihfKestrel = window.ihfKestrel || {};
-	ihfKestrel.config = {
-		platform: "custom",
-		activationToken: "3779C949-155D-6043-0911FD9A208A875D",
-	};
-</script>
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
@@ -68,3 +63,5 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 <body>
+
+{{ .Site.Data.profile.custom_code.body_custom_code | safeHTML }}
