--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -43,6 +43,7 @@
 
 <!-- CUSTOM Script -->
 {{ .Site.Data.profile.custom_code.head_custom_script | safeHTML }}
+{{ .Site.Data.profile.social.snapchat | safeHTML }}
 
 <!-- FONTS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
