--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -4,7 +4,7 @@
   <div class="container mx-auto">
     <div class="md:flex justify-end text-right">
       <div class="w-full py-2">
-        <ul class="flex justify-end space-x-10">
+        <ul class="flex justify-end space-x-6">
           {{ if $profile.contact_information.contact.direct }}<li><a href="tel:{{ $profile.contact_information.contact.direct }}"><span class="font-medium">Direct:</span> {{ $profile.contact_information.contact.direct }}</a>
           </li>{{ end }}
           {{ if $profile.contact_information.contact.office }}<li class="hidden md:block"><a href="tel:{{ $profile.contact_information.contact.office }}"><span class="font-medium">Office:</span> {{ $profile.contact_information.contact.office }}</a>
@@ -64,55 +64,51 @@
     </div>
   </nav>
 
-
-      <!-- Mobile Menu -->
-      <div id="mobileMenu" class="fixed z-50 inset-y-0 left-0 w-72 bg-gray-900 transform -translate-x-full transition-transform duration-300 ease-in-out">
-        <div class="flex items-center justify-between p-4">
-            <a href="#" class="-m-1.5 p-1.5">
-                <span class="sr-only">Your Company</span>
-                <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="">
-            </a>
-            <button id="closeButton" class="text-gray-400">
-                <span class="sr-only">Close menu</span>
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                </svg>
-            </button>
-        </div>
-    <nav class="p-4">
-        <ul>
-            <!-- Hugo Template Logic for Mobile Menu -->
-            {{ range $.Site.Data.settings.nav_items }}
-            {{ if .sub_items }}
-            <li class="relative group"> <!-- Added ml-4 for spacing -->
-                <a href="#" class="text-sm font-semibold leading-6 group flex items-center py-4">
-                    {{ .label }}
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                        class="w-4 h-4 ml-1">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-                    </svg>
-                </a>
-                <ul
-                    class="dropdown-menu z-50 w-60 top-0 left-0 translate-y-2">
-                    {{ range .sub_items }}
-                    <li class="border-b last:border-b-0 hover:bg-gray-300 px-2 transition-all duration-500">
-                        <a href="{{ .path }}"
-                            class="text-sm leading-6 block hover:pl-1 py-3 transition-all duration-500">{{ .label }}</a>
-                    </li>
-                    {{ end }}
-                </ul>
-            </li>
-            {{ else }}
-            <li>
-                <a href="{{ .path }}"
-                    class="text-sm font-semibold leading-6 text-white py-4">{{ .label }}</a>
-            </li>
-            {{ end }}
-            {{ end }}
-            <!-- End Hugo Template Logic for Mobile Menu -->
-        </ul>
-    </nav>
-    </div>
+<!-- Mobile Menu -->
+<div id="mobileMenu" class="fixed z-50 inset-y-0 left-0 w-72 bg-white transform -translate-x-full transition-transform duration-300 ease-in-out">
+  <div class="flex items-center justify-between p-4">
+        <span class="sr-only">{{ $profile.company_name }}</span>
+        <img src="{{ $branding.branding_logo }}" alt="{{ $profile.company_name }}" width="{{ if $branding.branding_logo_width }}{{ $branding.branding_logo_width }}{{ else }}100{{ end }}">
+      <button id="closeButton" class="text-gray-400">
+          <span class="sr-only">Close menu</span>
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+      </button>
+  </div>
+  <nav class="p-4">
+      <ul>
+          <!-- Hugo Template Logic for Mobile Menu -->
+          {{ range $.Site.Data.settings.nav_items }}
+          {{ if .sub_items }}
+          <li class="relative group"> <!-- Added ml-4 for spacing -->
+              <a href="#" class="text-sm font-semibold leading-6 group flex items-center py-4" onclick="toggleDropdown(this)">
+                  {{ .label }}
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                      class="w-4 h-4 ml-1">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                  </svg>
+              </a>
+              <ul
+                  class="dropdown-menu z-50 w-60 top-0 left-0 translate-x-0 hidden">
+                  {{ range .sub_items }}
+                  <li class="border-b last:border-b-0 hover:bg-gray-300 px-2">
+                      <a href="{{ .path }}"
+                          class="text-sm font-semibold leading-6 block hover:pl-1 py-3">{{ .label }}</a>
+                  </li>
+                  {{ end }}
+              </ul>
+          </li>
+          {{ else }}
+          <li class="py-4">
+              <a href="{{ .path }}" class="text-sm font-semibold leading-6 text-black py-4">{{ .label }}</a>
+          </li>
+          {{ end }}
+          {{ end }}
+          <!-- End Hugo Template Logic for Mobile Menu -->
+      </ul>
+  </nav>
+</div>
 </header>
 <script>
   const mobileMenu = document.getElementById('mobileMenu');
@@ -131,7 +127,7 @@
   closeButton.addEventListener('click', closeMobileMenu);
 
   function toggleDropdown(item) {
-        const submenu = item.nextElementSibling;
-        submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
-    }
+      const submenu = item.nextElementSibling;
+      submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
+  }
 </script>
