--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -19,10 +19,10 @@
         --primary-accent-color: {{ .Site.Data.appearance.colors_accent }};
 
         /* HEADER */
-        --top-header-background: {{ .Site.Data.settings.top_header_color }};
-        --top-header-text: {{ .Site.Data.settings.top_header_text_color }};
-        --header-background-color: {{ .Site.Data.settings.header_color }};
-        --header-text-color: {{ .Site.Data.settings.header_text_color }};
+        --top-header-background: {{ .Site.Data.navigation.top_header_color }};
+        --top-header-text: {{ .Site.Data.navigation.top_header_text_color }};
+        --header-background-color: {{ .Site.Data.navigation.header_color }};
+        --header-text-color: {{ .Site.Data.navigation.header_text_color }};
 
         /* TYPOGRAPHY */
         --footer-heading-color: {{ .Site.Data.footer.footer_heading_color }};
